[package]
name = "mfaizudd-minigrep"
version = "0.1.0"
edition = "2021"
description = "mfaizudd's implementation of minigrep from the rust programming language book"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
